--- a/FYPPacketSniffer/app/src/main/res/layout/fragment_about_us.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/fragment_about_us.xml
@@ -2,7 +2,7 @@
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
+    android:background="@color/backgroundColor"
     android:orientation="vertical">
 
     <LinearLayout
@@ -10,39 +10,54 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <ImageView
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/overview"/>
+            android:textSize="30dp"
+            android:text="OverView"
+            android:textStyle="bold|italic"
+            android:textColor="@color/textColor"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="17dp"
+            android:textColor="@color/white"
             android:text="@string/overview"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"/>
-        <ImageView
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/projectscope"
-            android:layout_marginTop="10dp"/>
+            android:textSize="30dp"
+            android:text="Project Scope"
+            android:textStyle="bold|italic"
+            android:textColor="@color/textColor"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="17dp"
             android:text="@string/projectscope"
             android:layout_marginLeft="10dp"
+            android:textColor="@color/white"
             android:layout_marginRight="10dp"/>
-
-        <ImageView
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/stakeholders"
-            android:layout_marginTop="10dp"/>
+            android:textSize="30dp"
+            android:text="Stakeholders"
+            android:textStyle="bold|italic"
+            android:textColor="@color/textColor"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="17dp"
+            android:textColor="@color/white"
             android:text="@string/stakeholders"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"/>
