--- a/FYPPacketSniffer/app/src/main/res/menu/drawer_menu.xml
+++ b/FYPPacketSniffer/app/src/main/res/menu/drawer_menu.xml
@@ -3,12 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:shownIn="navigation_view">
 
-    <group android:checkableBehavior="single">
+    <group
+        android:id="@+id/menu_top"
+        android:checkableBehavior="single">
         <item
             android:id="@+id/scan_devices"
             android:icon="@mipmap/device_conn"
-            android:title="Scan Network"
-            android:checked="true"/>
+            android:title="Scan Network" />
         <item
             android:id="@+id/wifi_details"
             android:icon="@mipmap/wifi_details"
@@ -31,8 +32,9 @@
             android:title="Aircrack-ng"/>
     </group>
 
-    <item android:title="">
-        <menu>
+    <group
+        android:id="@+id/menu_bottom"
+        android:checkableBehavior="single">
             <item
                 android:id="@+id/update_libraries"
                 android:icon="@mipmap/update_versions"
@@ -40,7 +42,7 @@
             <item
                 android:id="@+id/about_us"
                 android:icon="@mipmap/about_us"
-                android:title="About App" />
-        </menu>
-    </item>
+                android:title="About App"
+                android:checked="true"/>
+    </group>
 </menu>
