--- a/FYPPacketSniffer/app/src/main/res/layout/layout_item_network_utils.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/layout_item_network_utils.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:text="Util option"
         android:textSize="25sp"
+        android:textColor="@color/white"
         android:layout_marginLeft="40dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"/>
