--- a/FYPPacketSniffer/app/src/main/res/layout/layout_nmap_scan_item.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/layout_nmap_scan_item.xml
@@ -11,7 +11,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:background="@color/black">
+            android:background="@color/backgroundColor">
 
             <android.support.constraint.ConstraintLayout
                 android:id="@+id/nmap_host_info_layout"
