--- a/FYPPacketSniffer/app/src/main/res/menu/drawer_menu.xml
+++ b/FYPPacketSniffer/app/src/main/res/menu/drawer_menu.xml
@@ -20,15 +20,15 @@
             android:title="Packet Capture" />
         <item
             android:id="@+id/packet_analysis"
-            android:icon="@mipmap/packet_analysis"
+            android:icon="@mipmap/packet_analysis_round"
             android:title="Packet Analysis"/>
         <item
             android:id="@+id/network_utils"
-            android:icon="@mipmap/network_utilities_icon"
+            android:icon="@mipmap/network_utilities_icon_round"
             android:title="Network Utilities"/>
         <item
             android:id="@+id/aircrack_suite"
-            android:icon="@mipmap/packet_analysis"
+            android:icon="@mipmap/aircrack_round"
             android:title="Aircrack-ng"/>
     </group>
 
