--- a/FYPPacketSniffer/app/src/main/res/layout/fragment_aircrack_suite.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/fragment_aircrack_suite.xml
@@ -100,6 +100,7 @@
                     android:id="@+id/aircrack_attack_group"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+
                     app:layout_constraintTop_toBottomOf="@+id/aircrack_attack_layout"
                     app:layout_constraintLeft_toLeftOf="parent"
                     android:orientation="vertical">
@@ -108,19 +109,22 @@
                         android:id="@+id/aircrack_mode_1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="PTW Attack 64"/>
+                        android:text="PTW Attack 64"
+                        android:textColor="@color/textColor"/>
 
                     <RadioButton
                         android:id="@+id/aircrack_mode_2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="PTW Attack 128"/>
+                        android:text="PTW Attack 128"
+                        android:textColor="@color/textColor"/>
 
                     <RadioButton
                         android:id="@+id/aircrack_mode_3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Korek Attack" />
+                        android:text="Korek Attack"
+                        android:textColor="@color/textColor"/>
                 </RadioGroup>
 
             </android.support.constraint.ConstraintLayout>
@@ -135,7 +139,7 @@
             android:text="Result"
             android:textSize="20dp"
             android:textColor="@color/white"
-            android:background="@color/colorPrimary"/>
+            android:background="@color/cyan"/>
 
     </android.support.constraint.ConstraintLayout>
 </LinearLayout>
