--- a/FYPPacketSniffer/app/src/main/res/layout/layout_item_list_trace.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/layout_item_list_trace.xml
@@ -15,7 +15,7 @@
         android:layout_weight="0.2"
         android:gravity="left"
         android:text="No."
-        android:textColor="@color/red_color" />
+        android:textColor="@color/red" />
 
     <TextView
         android:id="@+id/textViewIp"
@@ -26,7 +26,7 @@
         android:gravity="left"
         android:paddingLeft="12dp"
         android:text="IP Address"
-        android:textColor="@color/green_color" />
+        android:textColor="@color/cyan" />
 
     <TextView
         android:id="@+id/textViewTime"
