--- a/FYPPacketSniffer/app/src/main/res/values/colors.xml
+++ b/FYPPacketSniffer/app/src/main/res/values/colors.xml
@@ -11,11 +11,10 @@
     <color name="wifi_info_2">#021C68</color>
     <color name="textColor">#7091BE</color>
     <color name="macAddressColor">#A9A9A9</color>
+    <color name="red">#ff0000</color>
+    <color name="cyan">#008577</color>
+    <color name="cyanDark">#00574B</color>
 
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="green_color">#007b76</color>
-    <color name="red_color">#ff0000</color>
 
 
 
