--- a/FYPPacketSniffer/app/src/main/res/layout/fragment_about_us.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/fragment_about_us.xml
@@ -11,14 +11,14 @@
         android:orientation="vertical">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="144dp"
             android:layout_height="wrap_content"
-            android:textSize="30dp"
-            android:text="OverView"
-            android:textStyle="bold|italic"
-            android:textColor="@color/textColor"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"/>
+            android:layout_marginRight="10dp"
+            android:text="OverView"
+            android:textColor="@color/textColor"
+            android:textSize="30dp"
+            android:textStyle="bold|italic" />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -27,15 +27,16 @@
             android:text="@string/overview"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"/>
+
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="207dp"
             android:layout_height="wrap_content"
-            android:textSize="30dp"
-            android:text="Project Scope"
-            android:textStyle="bold|italic"
-            android:textColor="@color/textColor"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"/>
+            android:layout_marginRight="10dp"
+            android:text="Project Scope"
+            android:textColor="@color/textColor"
+            android:textSize="30dp"
+            android:textStyle="bold|italic" />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -44,15 +45,16 @@
             android:layout_marginLeft="10dp"
             android:textColor="@color/white"
             android:layout_marginRight="10dp"/>
+
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:textSize="30dp"
-            android:text="Stakeholders"
-            android:textStyle="bold|italic"
-            android:textColor="@color/textColor"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"/>
+            android:layout_marginRight="10dp"
+            android:text="Stakeholders"
+            android:textColor="@color/textColor"
+            android:textSize="30dp"
+            android:textStyle="bold|italic" />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
