--- a/FYPPacketSniffer/app/src/main/res/layout/fragment_about_us.xml
+++ b/FYPPacketSniffer/app/src/main/res/layout/fragment_about_us.xml
@@ -62,18 +62,24 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"/>
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/credit"
-            android:layout_marginLeft="10dp"/>
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="30dp"
+            android:text="Credits"
+            android:textStyle="bold|italic"
+            android:textColor="@color/textColor"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:textSize="17dp"
+            android:textColor="@color/white"
             android:text="@string/credits"
-            android:layout_marginLeft="10dp"/>
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"/>
 
     </LinearLayout>
 
